--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,11 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
+
 
 
 
