Changing Login UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".screen.login.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/LoginScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
